<resources>
    <string name="app_name">Flip Card</string>

    <string name="string_main_play">Play</string>
    <string name="string_main_leaderboard">High Score</string>
    <string name="string_main_settings">Settings</string>

    <string name="string_dialog_easy">Easy</string>
    <string name="string_dialog_hard">Hard</string>
    <string name="string_dialog_cancel">Cancel</string>
    <string name="string_go_back">Go Back</string>
    <string name="string_flip_card">Flip Card</string>

    <string name="string_dialog_restart">Restart</string>
    <string name="string_dialog_main">Home</string>
    <string name="string_winner">Congratulations, You are a Winner</string>
    <string name="string_loser">I know, You can do better</string>

    <string name="game_paused">Game paused</string>
    <string name="quit">Do you want to quit ?</string>
    <string name="exit">Exit</string>
    <string name="resume">Resume</string>
    <string name="string_moves">Moves</string>
    <string name="string_time">Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>